--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 				<plugin>
 					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 					<artifactId>android-maven-plugin</artifactId>
-					<version>3.9.0-rc.3</version>
+					<version>3.7.0</version>
 					<configuration>
 						<genDirectory>${basedir}/gen</genDirectory>
 					</configuration>
