--- a/OkBitcoin/mobile/src/main/AndroidManifest.xml
+++ b/OkBitcoin/mobile/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MyActivity"
             android:label="@string/app_name">
@@ -17,6 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <service
+            android:name=".ListenerService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
+
+    </application>
 </manifest>
